Fixed an issue where the title and file path text could collapse in certain conditions

--- a/frontend/src/style/editor.css
+++ b/frontend/src/style/editor.css
@@ -40,7 +40,10 @@ a:hover {
 
 .editor-title {
   display: flex;
+  flex-direction: column;
   min-height: 70px;
+  flex-shrink: 0;
+  margin-bottom: 8px;
 }
 
 .editor-path {
@@ -58,7 +61,7 @@ a:hover {
   height: 100vh;
 }
 
-.editor > div {
+.editor > div:not(.editor-title) {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
